src/test/resources/valid_programs/approximate_e.notc
void main() {
    double e = 1;
    double term = 1;

    int i;
    for(i = 1; i <= 10; ++i) {
        term = term / i;
        e = e + term;
    }

    printDouble(e);
}
