src/test/resources/semantic_errors/overloading.notc
// Not allowed

void fun() {
}

int fun(double x) { 
    return 1;
}

void main() {
}
